# openai-model-registry

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  gen_reference.py  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  test_usage.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codecov.yml  codeql.yml  coverage.yml  cross-platform-test.yml  data-release-enhanced.yml  docs.yml  ostruct-pricing.yml  publish-poetry.yml  publish.yml  release-drafter.yml  release.yml  update-pricing.yml
api/: index.html
api/model-capabilities/: index.html
api/model-registry/: index.html
api_reference/SUMMARY/: index.html
api_reference/cli/app/: index.html
api_reference/cli/commands/cache/: index.html
api_reference/cli/commands/data/: index.html
api_reference/cli/commands/models/: index.html
api_reference/cli/commands/providers/: index.html
api_reference/cli/commands/update/: index.html
api_reference/cli/formatters/json/: index.html
api_reference/cli/formatters/table/: index.html
api_reference/cli/utils/helpers/: index.html
api_reference/cli/utils/options/: index.html
api_reference/config_paths/: index.html
api_reference/config_result/: index.html
api_reference/constraints/: index.html
api_reference/data_manager/: index.html
api_reference/deprecation/: index.html
api_reference/errors/: index.html
api_reference/logging/: index.html
api_reference/model_version/: index.html
api_reference/pricing/: index.html
api_reference/registry/: index.html
api_reference/schema_version/: index.html
api_reference/scripts/data_update/: index.html
api_reference/scripts/fetch_pricing_ostruct/: index.html
api_reference/scripts/update_registry/: index.html
changelog/: index.html
contributing/: index.html
contributing/RELEASE_CHECKLIST/: index.html
contributing/RELEASE_WORKFLOW/: index.html
contributing/cli-maintainers-guide/: index.html
data/: __init__.py  checksums.txt  data-changelog.md  models.yaml  overrides.yaml
docs/: changelog.md  contributing.md  index.md
docs/api/: index.md  model-capabilities.md  model-registry.md
docs/contributing/: RELEASE_CHECKLIST.md  RELEASE_WORKFLOW.md  cli-maintainers-guide.md  index.md
docs/user-guide/: advanced-usage.md  azure-openai.md  cli.md  getting-started.md  index.md  model-aliases.md  model-capabilities.md  parameter-validation.md  testing.md
examples/: README.md  basic_usage.py  cli_integration.py
scripts/: data_convert_unified_pricing.py  release.py  update_pricing.py
scripts/ostruct/: README.md  pricing_change_detector.j2  pricing_change_detector_schema.json  pricing_schema.json  pricing_template.j2
scripts/release/: create-final.sh  create-rc.sh
search/: search_index.json
src/openai_model_registry/: __init__.py  config_paths.py  config_result.py  constraints.py  data_manager.py  deprecation.py  errors.py  logging.py  model_version.py  pricing.py  registry.py  schema_version.py
src/openai_model_registry/cli/: __init__.py  app.py
src/openai_model_registry/cli/commands/: __init__.py  cache.py  data.py  models.py  providers.py  update.py
src/openai_model_registry/cli/formatters/: __init__.py  json.py  table.py
src/openai_model_registry/cli/utils/: __init__.py  helpers.py  options.py
src/openai_model_registry/config/: __init__.py  data-changelog.md  models.yml
src/openai_model_registry/scripts/: __init__.py  data_update.py  fetch_pricing_ostruct.py  update_registry.py
tests/: __init__.py  test_cli.py  test_cli_cache.py  test_cli_data.py  test_cli_update.py  test_config_paths.py  test_config_paths_additional.py  test_constraints.py  test_deprecation_and_constraints.py  test_documentation_examples.py  test_errors.py  test_fetch_pricing_ostruct.py  test_model_capabilities.py  test_model_version.py  test_pricing_fields.py  test_registry.py  test_registry_advanced.py  test_registry_config.py  test_registry_xdg.py  test_schema_version.py  test_singleton_thread.py  test_update_registry.py
user-guide/: index.html
user-guide/advanced-usage/: index.html
user-guide/azure-openai/: index.html
user-guide/cli/: index.html
user-guide/getting-started/: index.html
user-guide/model-aliases/: index.html
user-guide/model-capabilities/: index.html
user-guide/parameter-validation/: index.html
user-guide/testing/: index.html
